--- a/app/resources/css/app.css
+++ b/app/resources/css/app.css
@@ -6,7 +6,7 @@ body {
 body {
     /*display: flex;*/
     align-items: center;
-    padding-top: 40px;
+    /*padding-top: 40px;*/
     padding-bottom: 40px;
 }
 
@@ -78,4 +78,20 @@ body {
 .feature-icon-small {
     width: 3rem;
     height: 3rem;
+}
+
+.form-control-dark {
+    border-color: var(--bs-gray);
+}
+.form-control-dark:focus {
+    border-color: #fff;
+    box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
+}
+
+.text-small {
+    font-size: 85%;
+}
+
+.dropdown-toggle {
+    outline: 0;
 }
